--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,13 @@
 .App {
   text-align: center;
+  background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #09d3ac;
+.result {
+  
 }
