--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,27 @@
-.App {
+.App1 {
   text-align: center;
   background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
+  height: 100vh;
 }
 
+.App2 {
+  text-align: center;
+  background: linear-gradient(to right, #bdc3c7, #2c3e50);
+}
 .search {
   display: flex;
   justify-content: space-between;
 }
 
 .result {
-  
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  width: 500px;
+  border: 1px solid black;
+  margin: 100px auto;
+}
+
+html, body {
+  height: 100vh;
 }
