--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -1,6 +1,111 @@
-.Card {
-  display: flex;
+.body{
+  color: #fff;
+}
+.title{
+  width: 100%;
+  margin: 60px;
+  opacity: 0.2;
+  font-size: 63px;
+  z-index: 0;
+  line-height: 44px;
+  color: #fff;
+}
+.card{
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  width: 100%;
+  padding: 18px 82px 10px 82px;
+  margin-top: 0px;
+  z-index: 23;
+  font-family: 'Rubik', sans-serif;
+}
+.cityName{
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+  color: #FFC87A;
+}
+.date{
+  font-size: 15px;
+  margin-top: 0px;
+  color: #FFC87A;
+}
+.imgWeather{
+  margin: 0px;
+}
+.temperature{
+  font-size: 54px;
+  margin-top: -20px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: #FFC87A;
+}
+.trait{
+  margin: 0px 0px 4px 0px;
+  font-size: 10px;
+  color: #B37E32;
+}
+.tempMinMax{
+  font-size: 20px;
+  margin: 0px 0px 34px 0px;
+  color: #FFC75F;
+}
+.weatherDescription{
+  color: #94D4FF;
+  font-size: 20px;
+  margin: 0px 0px 6px 0px;
+}
+.temparatureTomorrow{
+  font-size: 9px;
+  margin: -9px 0px 9px 0px;
+}
+.tomorrow{
+  font-size: 10px;
+  margin: 0px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.cardNexDay{
+  display:flex;
   flex-direction: row;
-  justify-content: space-around;
+  margin-bottom: 30px;
+  font-family: 'Rubik', sans-serif;
+}
+.cardNexDay div:first-child{
+  margin-right: 15px;
+  padding: 13px;
+  border-radius: 10px;
+  margin-top: 12px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.cardNexDay div:last-child{
+  margin-left: 15px;
+  padding: 13px;
+  border-radius: 10px;
+  margin-top: 12px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.loading{
   height: 100%;
+  width: 54px;
+}
+
+@media screen and (min-width: 376px){
+  .title{
+    width: 100%;
+    margin: 0px;
+    opacity: 0.2;
+    font-size: 205px;
+    z-index: 0;
+    line-height: 144px;
+  }
+  .card{
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 18px 82px 10px 82px;
+    margin-top: -30px;
+    z-index: 23;
+  }
+
 }
